# src/http/routes/index.ts
@@ -3,6 +3,7 @@ import user from './user';
 import facility from './facility';
 import booking from './booking';
 import auth from './auth';
+import profile from './profile';
 
 const router = Router();
 
@@ -10,5 +11,6 @@ router.use('/users', user);
 router.use('/facilities', facility);
 router.use('/bookings', booking);
 router.use('/auth', auth);
+router.use('/profile', profile);
 
 export default router;
