# src/http/routes/profile.ts
@@ -1,0 +1,14 @@
+import { Router } from "express";
+import { createAuthenticationGuard, createAuthorizationGuard } from '@src/http/middlewares/authzn';
+import { userSessionRepo } from '@src/repo';
+import * as handler from "@src/http/handlers/profile.handler";
+
+const router = Router();
+
+router.get(
+  '/',
+  createAuthenticationGuard(userSessionRepo),
+  handler.getMyProfile
+);
+
+export default router;
